# Oxide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BENCHMARKS.md  USAGE.md  VALIDATION.md
docs/media/: README.md
docs/usage/: README.md  declare-store.md  flutter-codegen.md  frb-bindings.md  init-oxide.md  isolated-channels.md  navigation.md  persistence.md  reducer-pattern.md  ui-backends.md
examples/api_browser_app/: .pubignore  README.md  pubspec.yaml  pubspec_overrides.yaml
examples/api_browser_app/assets/: light.json
examples/api_browser_app/integration_test/: simple_test.dart
examples/api_browser_app/lib/: main.dart
examples/api_browser_app/rust/: Cargo.toml
examples/api_browser_app/rust/src/: frb_generated.rs  lib.rs
examples/api_browser_app/rust/src/api/: bridge.rs  comments_bridge.rs  isolated_channels_bridge.rs  mod.rs  navigation_bridge.rs  posts_bridge.rs  users_bridge.rs
examples/api_browser_app/rust/src/isolated_channels_demo/: channels.rs  mod.rs  state.rs
examples/api_browser_app/rust/src/routes/: home_route.rs  mod.rs  splash_route.rs  user_detail_route.rs
examples/api_browser_app/rust/src/state/: comments_action.rs  comments_state.rs  common.rs  mod.rs  posts_action.rs  posts_state.rs  users_action.rs  users_state.rs
examples/api_browser_app/rust/src/util/: mod.rs  util.rs
examples/benchmark_app/: README.md  pubspec.yaml
examples/benchmark_app/assets/: heavy.json
examples/benchmark_app/rust/: Cargo.toml
examples/benchmark_app/rust/assets/: heavy.json
examples/benchmark_app/rust/src/: frb_generated.rs  lib.rs  runtime.rs  tests.rs
examples/benchmark_app/rust/src/api/: bridge.rs  counter_bridge.rs  json_bridge.rs  mod.rs  nav_bridge.rs  sieve_bridge.rs
examples/benchmark_app/rust/src/reducers/: counter.rs  json.rs  mod.rs  sieve.rs
examples/benchmark_app/rust/src/routes/: bench_detail_route.rs  charts_route.rs  home_route.rs  mod.rs  routing_bench_route.rs  splash_route.rs
examples/benchmark_app/rust/src/state/: counter_action.rs  counter_state.rs  json_action.rs  json_state.rs  mod.rs  sieve_action.rs  sieve_state.rs
examples/benchmark_app/rust/src/util/: mod.rs
examples/counter_app/: .gitignore  README.md  pubspec.yaml
examples/counter_app/rust/: .gitignore  Cargo.toml
examples/counter_app/rust/src/: frb_generated.rs  lib.rs  runtime.rs  tests.rs
examples/counter_app/rust/src/api/: bridge.rs  isolated_channels_bridge.rs  mod.rs  navigation_bridge.rs
examples/counter_app/rust/src/isolated_channels_demo/: channels.rs  mod.rs  state.rs
examples/counter_app/rust/src/routes/: confirm_route.rs  counter_detail_route.rs  home_route.rs  mod.rs  splash_route.rs
examples/counter_app/rust/src/state/: app_action.rs  app_state.rs  mod.rs
examples/ticker_app/: README.md  pubspec.yaml
examples/ticker_app/rust/: Cargo.toml  cov-summary.json  cov.json  coverage-summary.json  coverage.json  full-cov.json
examples/ticker_app/rust/src/: frb_generated.rs  lib.rs  runtime.rs  tests.rs
examples/ticker_app/rust/src/api/: bridge.rs  mod.rs  navigation_bridge.rs
examples/ticker_app/rust/src/routes/: home_route.rs  mod.rs  splash_route.rs
examples/ticker_app/rust/src/state/: app_action.rs  app_state.rs  mod.rs
examples/todos_app/: README.md  pubspec.yaml
examples/todos_app/rust/: Cargo.toml
examples/todos_app/rust/src/: frb_generated.rs  lib.rs  runtime.rs  tests.rs
examples/todos_app/rust/src/api/: bridge.rs  mod.rs  navigation_bridge.rs
examples/todos_app/rust/src/routes/: home_route.rs  mod.rs  splash_route.rs
examples/todos_app/rust/src/state/: app_action.rs  app_state.rs  mod.rs
flutter/oxide_annotations/: CHANGELOG.md  README.md  pubspec.yaml
flutter/oxide_generator/: CHANGELOG.md  README.md  build.yaml  pubspec.yaml  pubspec_overrides.yaml
flutter/oxide_runtime/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
rust/: Cargo.toml
rust/oxide_core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rust/oxide_core/benches/: store_dispatch.rs
rust/oxide_core/src/: lib.rs  runtime.rs  tests.rs
rust/oxide_core/src/core/: engine.rs  error.rs  handle.rs  mod.rs  reducer_engine.rs  snapshot.rs  store.rs  task.rs
rust/oxide_core/src/engine/: context.rs  error.rs  mod.rs  navigation_ctx.rs  navigation_runtime.rs  navigation_singleton.rs  navigation_ticket_registry.rs  reducer_engine.rs  snapshot.rs  store.rs
rust/oxide_core/src/ffi/: error.rs  mod.rs  runtime.rs  stream.rs
rust/oxide_core/src/isolated_channels/: callbacking.rs  error.rs  event_channel.rs  event_duplex_channel.rs  mod.rs  runtime.rs
rust/oxide_core/src/navigation/: default_extra.rs  default_return.rs  mod.rs  nav_command.rs  nav_route.rs  no_extra.rs  no_return.rs  oxide_route_traits.rs  route.rs  route_context.rs  route_extra.rs  route_return.rs
rust/oxide_core/src/persistence/: backend.rs  codec.rs  config.rs  handle.rs  mod.rs  path.rs  worker.rs
rust/oxide_core/tests/: navigation_runtime_tests.rs  persistence_corrupt_data.rs  persistence_engine_restore.rs  public_api.rs  serialization_workflow.rs  sliced_updates.rs  state_persistence_feature.rs  wasm_wasi_compat.rs  wasm_web_compat.rs
rust/oxide_generator_rs/: CHANGELOG.md  Cargo.toml  README.md
rust/oxide_macros/: Cargo.toml  README.md
rust/oxide_macros/src/: derive.rs  lib.rs  meta.rs  reducer.rs
rust/oxide_macros/tests/: compile.rs
rust/oxide_macros/tests/ui/: fail_actions_wrong_target.rs  fail_reducer_async_reduce.rs  fail_reducer_missing_args.rs  fail_reducer_missing_sideeffect.rs  fail_reducer_missing_sideeffect.stderr  fail_reducer_wrong_signature.rs  fail_state_wrong_target.rs  pass_actions_enum.rs  pass_reducer_fn.rs  pass_reducer_persistence.rs  pass_state_enum.rs  pass_state_struct.rs
tools/scripts/: build.ps1  build.sh  build_windows_release.ps1  clean.ps1  clean.sh  git_flow.ps1  git_flow.sh  qa.ps1  qa.sh  rust_coverage.ps1  version_sync.ps1  version_sync.sh  web_wasm.ps1  web_wasm.sh  windows_examples_smoke.ps1
(+291 files in other folders)
