[package]
name = "rust_lib_benchmark_app"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
oxide_core = { version = "0.2.0", path = "../../../rust/oxide_core" }
oxide_generator_rs = { version = "0.2.0", path = "../../../rust/oxide_generator_rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio-stream = { version = "0.1", features = ["sync"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
tokio = { version = "1.34.0", features = ["rt", "sync"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
tokio = { version = "1.34.0", features = ["rt", "sync", "time"] }

[features]
default = ["navigation-binding"]
navigation-binding = ["oxide_core/navigation-binding", "oxide_generator_rs/navigation-binding"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
