[package]
name = "rust_lib_counter_app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
oxide_core = { version = "0.1.0", path = "../../../rust/oxide_core" }
oxide_generator_rs = { version = "0.1.0", path = "../../../rust/oxide_generator_rs" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
