[package]
name = "rust_lib_ticker_app"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
oxide_core = { version = "0.1.1", path = "../../../rust/oxide_core" }
oxide_generator_rs = { version = "0.1.1", path = "../../../rust/oxide_generator_rs" }
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["sync", "rt"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
tokio = { version = "1", features = ["sync", "rt", "time"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
